--- a/cpp2py/template_data/convert_class_ptr.j2
+++ b/cpp2py/template_data/convert_class_ptr.j2
@@ -1,4 +1,3 @@
 cdef {{ name }} obj = {{ name }}.__new__({{ name }})
-obj.thisptr = <cpp.{{ name }} *>{{ cpp_call }}
-obj.owner = {{ copy }}
+obj.thisptr = shared_ptr[cpp.{{ name }}](<cpp.{{ name }} *>{{ cpp_call }})
 return obj
